# PACE

./: App.tsx  CONTRIBUTING.md  README.md  docker-compose.yml  env.sample  package.json  storybook.tsx  structure.txt  tsconfig.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/db/: init.sql
apps/api/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/api/src/database/: database.module.ts
apps/api/src/entities/: fill.entity.ts  pilot.entity.ts  slate.entity.ts  trade.entity.ts  user.entity.ts
apps/mobile/: app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
apps/mobile/android/: settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/ios/: .xcode.env.local  Podfile
apps/mobile/ios/PACE.xcodeproj/: project.pbxproj
apps/mobile/src/: App.tsx
apps/services/ingest/: Dockerfile  main.py  pyproject.toml
apps/services/risk/: Dockerfile  main.py  pyproject.toml
ios/: .xcode.env.local  Podfile
ios/PACEIOS/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/PACEIOS.xcodeproj/: project.pbxproj
ios/PACEIOS.xcworkspace/: contents.xcworkspacedata
ios/PACEIOSTests/: PACEIOSTests.m
src/api/: stubApi.ts
src/components/: BalanceHeader.stories.tsx  BalanceHeader.tsx  Pill.stories.tsx  Pill.tsx  PrimaryButton.stories.tsx  PrimaryButton.tsx  TransactionSheet.tsx
src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/hooks/: useBalance.ts  usePilots.ts  useTransactions.ts
src/navigation/: index.tsx
src/screens/: DashboardScreen.tsx  HomeScreen.tsx  IntroScreen.tsx  LinkBrokerScreen.tsx  OnboardingScreen.tsx  PilotListScreen.tsx  SlateBuilderScreen.tsx
src/store/: slateStore.ts
src/theme/: theme.ts  typography.ts
(+39 files in other folders)
